# Water-Simulator

./: .gitignore  CMakeLists.txt  README.md
cmake/: imgui.cmake  raylib.cmake  rlimgui.cmake
src/: UI.cpp  UI.hpp  Water.cpp  Water.hpp  main.cpp
